--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,15 +1,16 @@
 @import 'animate';
+@import './vendor/rc-banner-anim.min.css';
 * {
   margin: 0;
   padding: 0;
 }
 
 body {
-  background-color: #F6F6F6;
+  background-color: #f6f6f6;
 }
 
 #root,
-#root>div {
-  height: 100%;
+#root > div {
   width: 100%;
+  height: 100%;
 }
