--- a/app/components/Banner/Banner.scss
+++ b/app/components/Banner/Banner.scss
@@ -2,24 +2,12 @@
   padding: 0;
 }
 
-.banner-user {
-  height: 220px;
-}
-
 .banner-user-elem {
   position: relative;
   overflow: hidden;
+  font-size: inherit;
   color: #fff;
   text-align: center;
-}
-
-.banner-user-elem .banner-user-title {
-  top: 40%;
-  font-size: 32px;
-}
-
-.banner-user-elem .banner-user-text {
-  top: 40%;
 }
 
 .banner-anim-elem .bg {
@@ -29,4 +17,28 @@
   width: 100%;
   height: 100%;
   overflow: hidden;
+  font-size: inherit;
+  background-size: 100% auto;
+}
+
+.bg1 {
+  background: url('./images/banner1.jpg');
+  background-size: 100% 100%;
+}
+
+.bg2 {
+  background: url('./images/banner2.jpg');
+  background-size: 100% 100%;
+}
+
+.banner-user-elem .banner-user-title {
+  top: 50%;
+  font-size: 1.3em;
+  letter-spacing: 4px;
+}
+
+.banner-user-elem .banner-user-text {
+  top: 50%;
+  font-size: 0.7em;
+  letter-spacing: 3px;
 }
