添加头部的自适应

--- a/app/components/Header/Header.scss
+++ b/app/components/Header/Header.scss
@@ -15,7 +15,7 @@ $ThemeColor: #f8b139;
   display: flex;
   align-items: center;
   height: 50%;
-  padding-left: 28%;
+  padding-left: 25%;
   font-size: 16px;
 }
 
@@ -36,6 +36,19 @@ $ThemeColor: #f8b139;
 
 .menu {
   background-color: rgba($color: #000, $alpha: 0.6);
+
+  .menu_item {
+    display: inline-block;
+    padding: 6px 12px;
+    white-space: nowrap;
+  }
+
+  #train {
+    font-size: 16px;
+    color: #fff;
+    background-color: transparent;
+    border: 0;
+  }
 }
 
 .header_logo {
@@ -47,4 +60,37 @@ $ThemeColor: #f8b139;
   background-color: $ThemeColor;
   background-size: auto 100%;
   border-radius: 4px;
+}
+
+@media screen and (max-width: 1060px) {
+  .contact,
+  .menu {
+    font-size: 14px;
+  }
+
+  .menu {
+    justify-content: space-around;
+
+    .menu_item {
+      padding: 0;
+    }
+
+    #train {
+      padding: 0;
+      font-size: 14px;
+    }
+  }
+}
+
+@media screen and (max-width: 710px) {
+  .contact,
+  .menu {
+    font-size: 12px;
+  }
+
+  .menu {
+    #train {
+      font-size: 12px;
+    }
+  }
 }
